{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 231,
  "lineage": "41b5e24d-c9e2-47fa-8ae1-f43315996d7b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:internet-gateway/igw-0b61e2f9d8314017e",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-021badf260afa52a2"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-021badf260afa52a2"
                ]
              }
            ],
            "id": "igw-0b61e2f9d8314017e",
            "internet_gateway_id": "igw-0b61e2f9d8314017e",
            "owner_id": "793861635529",
            "region": "us-east-2",
            "tags": {
              "Name": "centrally-clean-koi-IGW"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:route-table/rtb-0ac4edd3798f8fb94",
            "default_route_table_id": "rtb-0ac4edd3798f8fb94",
            "id": "rtb-0ac4edd3798f8fb94",
            "owner_id": "793861635529",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0eede553eb3756ff8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-centrally-clean-koi"
            },
            "tags_all": {
              "Name": "private-centrally-clean-koi"
            },
            "timeouts": null,
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e534591fd9e8012",
            "arn": "arn:aws:ec2:us-east-2:793861635529:elastic-ip/eipalloc-07e534591fd9e8012",
            "association_id": "eipassoc-051fd83763350fa9c",
            "domain": "vpc",
            "id": "eipalloc-07e534591fd9e8012",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c63241a4fc23dd52",
            "private_dns": "ip-172-16-3-44.us-east-2.compute.internal",
            "private_ip": "172.16.3.44",
            "public_dns": "ec2-3-20-56-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.56.116",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "centrally-clean-koi-NAT"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0536aa7d284515cdb",
            "arn": "arn:aws:ec2:us-east-2:793861635529:elastic-ip/eipalloc-0536aa7d284515cdb",
            "association_id": "eipassoc-0bc8c9f3519ade877",
            "domain": "vpc",
            "id": "eipalloc-0536aa7d284515cdb",
            "instance": "i-0280ffa19c7f6005f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e04f314800ce7df3",
            "private_dns": "ip-172-16-7-249.us-east-2.compute.internal",
            "private_ip": "172.16.7.249",
            "public_dns": "ec2-18-218-159-204.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.159.204",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "centrally-clean-koi-Windows"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-Windows"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bb7d855677353076",
            "arn": "arn:aws:ec2:us-east-2:793861635529:instance/i-078638f2eb013ce56",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02d40909ae3b91bd5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078638f2eb013ce56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "centrally-clean-koi-windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c7d7e231678bfb28"
              }
            ],
            "primary_network_interface_id": "eni-0c7d7e231678bfb28",
            "private_dns": "ip-172-16-11-15.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.11.15",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02d40909ae3b91bd5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaac8168e4185132",
            "tags": {
              "Name": "centrally-clean-koi-linux"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0001ab08d69935915"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.windows",
            "aws_key_pair.sai_key",
            "aws_security_group.linux_sg",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet",
            "tls_private_key.sai_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05b00365623a86bd3",
            "arn": "arn:aws:ec2:us-east-2:793861635529:instance/i-0280ffa19c7f6005f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0010b406711535103",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0280ffa19c7f6005f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "centrally-clean-koi-windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "IlAKU7mivoiWfXKZVe0kwakPGK7bOI4+KpAm6gzmhTHsFbeXF4ponDd+0IGInYgV1jQAy975AKV+u0kUHmLgF53RrJNzZ+uY1NxKX6JPijkCuOswqM5jY8VXCUORpFMO2UmLPfwq2CsYJ+oNOlXMng34pjKnXnI1i2Rz2gJnZvj0fm1eMAyrvyxrGAIAHxOnSNmYX9Ch43QXCfb0OE0FKEP/Xctq8J3klHQ0k+7Uqoe1JRKOJTfIXBol9QncmaknQ2M9GLsc0+r+hByD9+spIDjT5XYX7gbw2Wm8NCJu5SgfgsxJemG4XXFAdabxiP7IYvSdDzuQt4tv4Tz0JgLTiE/wksZ6Ymnf5i4JDza9+2/t4UDz5Dgt+FIRs4P17L91DFkB8Oxr8E9pEQFyFbF9kgjtenWV9RlO/pEKi31kxCvNeUX6er+xhFW/EytHXbxZruPsur5Jye9xcfywtJksJM [...]
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e04f314800ce7df3"
              }
            ],
            "primary_network_interface_id": "eni-0e04f314800ce7df3",
            "private_dns": "ip-172-16-7-249.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.7.249",
            "public_dns": "ec2-18-218-159-204.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.159.204",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0010b406711535103",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0080c775b46fc4845",
            "tags": {
              "Name": "centrally-clean-koi-windows"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-windows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d7acbe149ef66ef3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sai_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet",
            "tls_private_key.sai_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:internet-gateway/igw-0b61e2f9d8314017e",
            "id": "igw-0b61e2f9d8314017e",
            "owner_id": "793861635529",
            "region": "us-east-2",
            "tags": {
              "Name": "centrally-clean-koi-IGW"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-IGW"
            },
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e534591fd9e8012",
            "association_id": "eipassoc-051fd83763350fa9c",
            "connectivity_type": "public",
            "id": "nat-0eede553eb3756ff8",
            "network_interface_id": "eni-0c63241a4fc23dd52",
            "private_ip": "172.16.3.44",
            "public_ip": "3.20.56.116",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0080c775b46fc4845",
            "tags": {
              "Name": "centrally-clean-koi-NAT"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:network-acl/acl-0299a25145d5f0a02",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-0299a25145d5f0a02",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.16.7.249/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "172.16.7.249/32",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "793861635529",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-0aaac8168e4185132"
            ],
            "tags": {
              "Name": "centrally-clean-koi-private"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-private"
            },
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:network-acl/acl-08ce76139ea563111",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 500,
                "to_port": 0
              }
            ],
            "id": "acl-08ce76139ea563111",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "35.149.205.152/32",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 3389
              }
            ],
            "owner_id": "793861635529",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-0080c775b46fc4845"
            ],
            "tags": {
              "Name": "centrally-clean-koi-Public"
            },
            "tags_all": {
              "Name": "centrally-clean-koi-Public"
            },
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2516282107",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0299a25145d5f0a02",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.249/32",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4121419696",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0299a25145d5f0a02",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.windows",
            "aws_key_pair.sai_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet",
            "tls_private_key.sai_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.16.7.249/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-674301493",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0299a25145d5f0a02",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.windows",
            "aws_key_pair.sai_key",
            "aws_network_acl.nacl_private",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet",
            "tls_private_key.sai_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_private_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4224078012",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0299a25145d5f0a02",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_dynamic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2463371422",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08ce76139ea563111",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-790527056",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08ce76139ea563111",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4069041621",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08ce76139ea563111",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_inbound_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "35.149.205.152/32",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1329776923",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08ce76139ea563111",
            "protocol": "6",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl_public_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-917301077",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08ce76139ea563111",
            "protocol": "-1",
            "region": "us-east-2",
            "rule_action": "allow",
            "rule_number": 500,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.nacl_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:route-table/rtb-01c3b7f91a4963bf8",
            "id": "rtb-01c3b7f91a4963bf8",
            "owner_id": "793861635529",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b61e2f9d8314017e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-centrally-clean-koi"
            },
            "tags_all": {
              "Name": "public-centrally-clean-koi"
            },
            "timeouts": null,
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021355458466dd7bd",
            "region": "us-east-2",
            "route_table_id": "rtb-01c3b7f91a4963bf8",
            "subnet_id": "subnet-0080c775b46fc4845"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:security-group/sg-0001ab08d69935915",
            "description": "Allows SSH, and MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0001ab08d69935915",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.7.249/32"
                ],
                "description": "Allows inbound SSH 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "35.149.205.152/32"
                ],
                "description": "Allows inbound MySQL 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "linux-sg-centrally-clean-koi",
            "name_prefix": "",
            "owner_id": "793861635529",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793861635529",
            "id": "sg-0001ab08d69935915",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_instance.windows",
            "aws_key_pair.sai_key",
            "aws_security_group.windows_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet",
            "tls_private_key.sai_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:security-group/sg-0d7acbe149ef66ef3",
            "description": "Allows RDP, HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7acbe149ef66ef3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "35.149.205.152/32"
                ],
                "description": "Allows inbound RDP 3389",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "windows-sg-centrally-clean-koi",
            "name_prefix": "",
            "owner_id": "793861635529",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "centrally-clean-koi"
            },
            "tags_all": {
              "Name": "centrally-clean-koi"
            },
            "timeouts": null,
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793861635529",
            "id": "sg-0d7acbe149ef66ef3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "data.http.my_ip",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:subnet/subnet-0aaac8168e4185132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaac8168e4185132",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793861635529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-centrally-clean-koi"
            },
            "tags_all": {
              "Name": "private-centrally-clean-koi"
            },
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793861635529",
            "id": "subnet-0aaac8168e4185132",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:subnet/subnet-0080c775b46fc4845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0080c775b46fc4845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793861635529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-centrally-clean-koi"
            },
            "tags_all": {
              "Name": "public-centrally-clean-koi"
            },
            "vpc_id": "vpc-021badf260afa52a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793861635529",
            "id": "subnet-0080c775b46fc4845",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.vpc-01",
            "random_pet.sai_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793861635529:vpc/vpc-021badf260afa52a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/20",
            "default_network_acl_id": "acl-0ae020e354314a079",
            "default_route_table_id": "rtb-0ac4edd3798f8fb94",
            "default_security_group_id": "sg-0b2e354667b8b77c2",
            "dhcp_options_id": "dopt-0fb1879b5d8460781",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021badf260afa52a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac4edd3798f8fb94",
            "owner_id": "793861635529",
            "region": "us-east-2",
            "tags": {
              "Name": "centrally-clean-koi"
            },
            "tags_all": {
              "Name": "centrally-clean-koi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_pet.sai_pet"
          ]
        }
      ]
    }
  ]
}